# project-2_Venikova_25555

./: .gitignore  Makefile  README.md  db_meta.json  pyproject.toml
src/: decorators.py
src/primitive_db/: core.py  engine.py  main.py  parser.py  utils.py
